[gd_scene load_steps=2 format=3 uid="uid://xdmrotg8fr25"]

[ext_resource type="Script" path="res://scripts/game_over_screen.gd" id="1_bb3jo"]

[node name="GameOverScreen" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
script = ExtResource("1_bb3jo")

[node name="Background" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Vbox" type="VBoxContainer" parent="."]
custom_minimum_size = Vector2(300, 0)
layout_mode = 1
anchors_preset = 13
anchor_left = 0.5
anchor_right = 0.5
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 10
alignment = 1

[node name="TitleLabel" type="Label" parent="Vbox"]
unique_name_in_owner = true
layout_mode = 2
theme_override_colors/font_color = Color(0.741176, 0, 0, 1)
theme_override_font_sizes/font_size = 48
text = "He's Dead, Jim."
horizontal_alignment = 1

[node name="Control" type="Control" parent="Vbox"]
layout_mode = 2

[node name="Control2" type="Control" parent="Vbox"]
layout_mode = 2

[node name="Control5" type="Control" parent="Vbox"]
layout_mode = 2

[node name="ScoreLabel" type="Label" parent="Vbox"]
unique_name_in_owner = true
layout_mode = 2
theme_override_font_sizes/font_size = 32
text = "You let him suffer through x Rooms."
horizontal_alignment = 1

[node name="Control3" type="Control" parent="Vbox"]
layout_mode = 2

[node name="Control4" type="Control" parent="Vbox"]
layout_mode = 2

[node name="RetryButton" type="Button" parent="Vbox"]
unique_name_in_owner = true
custom_minimum_size = Vector2(200, 48)
layout_mode = 2
size_flags_horizontal = 4
text = "Keep Torturing"

[node name="MenuButton" type="Button" parent="Vbox"]
unique_name_in_owner = true
custom_minimum_size = Vector2(200, 48)
layout_mode = 2
size_flags_horizontal = 4
text = "Enough Torture"

[connection signal="pressed" from="Vbox/RetryButton" to="." method="_on_retry_button_pressed"]
[connection signal="pressed" from="Vbox/MenuButton" to="." method="_on_menu_button_pressed"]
